fixed user photo bug
fixed user photo bug by giving white background to user image, but background is still in fixed position and still goes off screen when screen size gets smaller. added comments to layout

--- a/main.css
+++ b/main.css
@@ -18,37 +18,44 @@ body {
   font-weight: 400;
   line-height: 1.6;
   color: #969696;
+  /*
+    background-image: url(../images/bg-pattern-top.svg),
+                      url(../images/bg-pattern-bottom.svg);
+    background-color: $color-primary-1;
+    background-repeat: no-repeat;
+    background-position: top -50rem left -30rem, bottom -130rem right -30rem;
+    */
   background-color: #19a2ae;
+  background-size: cover;
   overflow: hidden;
 }
 
-.card {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: 13rem 15rem;
-      grid-template-rows: 13rem 15rem;
-}
-
 .container {
-  position: relative;
-  max-width: 100vw;
-  z-index: 1;
+  width: 100%;
+  height: 100%;
 }
 
 .icon {
-  display: block;
-  position: absolute;
+  position: relative;
   z-index: 10;
 }
 
-.icon--top {
+.icon__icon-top {
+  position: absolute;
+  display: block;
+  width: 70%;
+  height: auto;
   top: -50rem;
   left: -30rem;
 }
 
-.icon--bottom {
-  top: 30em;
-  left: 50rem;
+.icon__icon-bottom {
+  position: fixed;
+  display: block;
+  width: 70%;
+  height: auto;
+  right: -30rem;
+  bottom: -50rem;
 }
 
 .card {
@@ -62,6 +69,10 @@ body {
   border-radius: 2rem;
   width: 32.5rem;
   overflow: hidden;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 13rem 15rem;
+      grid-template-rows: 13rem 15rem;
 }
 
 .card__image {
@@ -86,16 +97,17 @@ body {
   position: relative;
 }
 
-.card__photo-user {
-  display: block;
+.card__user--photo {
+  display: inline-block;
   position: absolute;
   border-radius: 50%;
   border: solid 5px #fff;
-  height: 11rem;
-  width: 11rem;
+  height: 11.5rem;
+  width: 11.5rem;
+  background-color: #fff;
   -webkit-transform: translateY(-8rem);
           transform: translateY(-8rem);
-  z-index: 100;
+  z-index: 150;
 }
 
 .card__name {
