--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,30 +1,38 @@
 //BACKGROUND
 
-.container {    
-    position: relative;
-    max-width: 100vw;
-    z-index: 1;
+.container {
+    width: 100%;
+    height: 100%;
 }
 
-.icon {
-   display: block;
-   position: absolute;
-   z-index: 10;
 
-    &--top {              
+.icon {
+    position: relative;
+    z-index: 10;
+    
+    &__icon-top {  
+        position: absolute;
+        display: block;
+        width: 70%;    
+        height: auto;  
         top: -50rem;
         left: -30rem;
     }
 
-    &--bottom {
-        top: 30em;
-        left: 50rem;
+    &__icon-bottom {
+        position: fixed;
+        display: block;
+        width: 70%;
+        height: auto;
+        right: -30rem;
+        bottom: -50rem;
     }
 }
 
+
 //CARD
 .card {
-    position: absolute;
+    position: absolute;    
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -35,10 +43,17 @@
     width: 32.5rem;
     overflow: hidden;
 
+    display: grid;
+    grid-template-rows: 13rem 15rem;
+
+    //HEADER IMAGE
+
     &__image {
         background-image: url(/images/bg-pattern-card.svg);
         background-size: cover;
     }
+
+    //USER INFO
 
     &__user {
         display: flex;
@@ -47,23 +62,26 @@
         justify-content: center;
 
         position: relative;
-    }
 
-    &__photo-user {
-        display: block;
-        position: absolute;
-        border-radius: 50%;
-        border: solid 5px #fff;
-        height: 11rem;
-        width: 11rem;
-        transform: translateY(-8rem);
-        z-index: 100;        
-        //padding: 0;
+        &--photo {
+            display: inline-block;
+            position: absolute;
+            border-radius: 50%;
+            border: solid 5px #fff;
+            height: 11.5rem;
+            width: 11.5rem;
+            background-color: #fff;
+            transform: translateY(-8rem);
+            z-index: 150;
+        }
     }
 
     &__name {
         padding-top: 5rem;
     }
+
+
+    //STATISTICS
 
     &__stats {
         display: flex;
@@ -84,8 +102,6 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-
-            //padding: 2rem 0;
         }
     }
 }
